--- a/calico/getting-started/kubernetes/community-tested.mdx
+++ b/calico/getting-started/kubernetes/community-tested.mdx
@@ -26,7 +26,7 @@ description: Provides community inputs on what versions of Kubernetes and platfo
 - [OpenShift](openshift/installation.mdx)
 - [OpenStack](../openstack/overview.mdx)
 - [RKE](rancher.mdx)
-- [Calico for Windows](windows-calico/quickstart.mdx)
+- [Calico for Windows](windows-calico/operator.mdx)
 
 ## Community-tested versions and platforms
 
