--- a/calico/getting-started/kubernetes/windows-calico/manual-install/index.mdx
+++ b/calico/getting-started/kubernetes/windows-calico/manual-install/index.mdx
@@ -1,9 +1,9 @@
 ---
-description: Get Calico for Windows running in your Kubernetes cluster.
+description: Install Calico for Windows using the manual method.
 hide_table_of_contents: true
 ---
 
-# Kubernetes
+# Manual Installation
 
 import DocCardList from '@theme/DocCardList';
 import { useCurrentSidebarCategory } from '@docusaurus/theme-common';
