--- a/calico/getting-started/kubernetes/windows-calico/rancher.mdx
+++ b/calico/getting-started/kubernetes/windows-calico/rancher.mdx
@@ -2,7 +2,7 @@
 description: Install Calico for Windows on a Rancher RKE cluster.
 ---
 
-# Install Calico for Windows on a Rancher Kubernetes Engine cluster
+# Calico for Windows on a Rancher Kubernetes Engine cluster
 
 ## Big picture
 
@@ -45,7 +45,7 @@ The following steps will outline the installation of {{prodname}} networking on 
 
    :::
 
-1. Download the necessary Installation custom resource.
+1. Download the necessary Installation custom resources.
 
    ```bash
    wget {{manifestsUrl}}/manifests/custom-resources.yaml
@@ -95,7 +95,7 @@ The following steps will outline the installation of {{prodname}} networking on 
 
    :::note
 
-   For more information on configuration options available in this manifest, see [the installation reference](../../../../reference/installation/api.mdx).
+   For more information on configuration options available in this manifest, see [the installation reference](../../../reference/installation/api.mdx).
 
    :::
 
@@ -111,7 +111,8 @@ The following steps will outline the installation of {{prodname}} networking on 
    kubectl patch ipamconfigurations default --type merge --patch='{"spec": {"strictAffinity": true}}'
    ```
 
-1. Finally, follow the {{prodnameWindows}} [quickstart guide for Kubernetes](../quickstart.mdx#install-calico-for-windows-manually)
+1. Finally, install {{prodnameWindows}}. For an operator installation, follow the [operator guide](operator.mdx).
+   For manual installation, follow [quickstart guide](manual-install/quickstart.mdx#install-calico-for-windows-manually).
    For VXLAN clusters, follow the instructions under the "Kubernetes VXLAN" tab. For BGP clusters, follow the instructions under the "Kubernetes BGP" tab.
 
    :::note
@@ -124,5 +125,5 @@ The following steps will outline the installation of {{prodname}} networking on 
 
 ## Next steps
 
-- [Try the basic policy demo](../demo.mdx)
-- [Secure pods with {{prodname}} network policy](../../../../network-policy/get-started/calico-policy/calico-network-policy.mdx)
+- [Try the basic policy demo](demo.mdx)
+- [Secure pods with {{prodname}} network policy](../../../network-policy/get-started/calico-policy/calico-network-policy.mdx)
