--- a/calico/operations/monitor/monitor-component-visual.mdx
+++ b/calico/operations/monitor/monitor-component-visual.mdx
@@ -139,6 +139,8 @@ metadata:
     app:  grafana-pod
     role: monitoring
 spec:
+  nodeSelector:
+    kubernetes.io/os: linux
   containers:
   - name: grafana-pod
     image: grafana/grafana:latest
@@ -176,7 +178,7 @@ By using `port-forward` feature expose Grafana to your local machine.
 kubectl port-forward pod/grafana-pod 3000:3000 -n calico-monitoring
 ```
 
-You can now access Grafana web-ui at [http://localhost:3000](http://localhost:3000), if you prefer to visit Felix dashboard directly [click here](http://localhost:3000/d/calico-felix-dashboard/felix-dashboard-calico?orgId=1).
+You can now access the Grafana web-ui at [http://localhost:3000](http://localhost:3000), if you prefer to visit the Felix dashboard directly [click here](http://localhost:3000/d/calico-felix-dashboard/felix-dashboard-calico?orgId=1).
 
 :::note
 
