--- a/calico/release-notes/index.mdx
+++ b/calico/release-notes/index.mdx
@@ -10,11 +10,11 @@ Learn about the new features, bug fixes, and other updates in this release of {{
 
 ### HPC-based Windows install and upgrade
 
-We've added support for HPC (HostProcess/Privileged containers) install and upgrade for Windows nodes/
+We've added support for Operator-based install and upgrade for Windows nodes using HPC (HostProcess/Privileged containers)/
 {{prodname}} can now bootstrap Windows worker nodes just like Linux worker nodes.
 Platform engineers can scale Windows worker nodes with an auto-scaling node pool without bootstraping each node manually, and upgrade {{prodname}} deployments without manually upgrading nodes one at a time.
 
-For more information, see [Quickstart](../getting-started/kubernetes/windows-calico/quickstart#install-calico-for-windows-using-hostprocess-containers).
+For more information, see [the {{prodnameWindows}} Operator guide](../getting-started/kubernetes/windows-calico/operator.mdx).
 
 ### ipV6 support for eBPF
 
