--- a/calico/getting-started/kubernetes/windows-calico/demo.mdx
+++ b/calico/getting-started/kubernetes/windows-calico/demo.mdx
@@ -11,8 +11,8 @@ This guide provides a simple demo to illustrate basic pod-to-pod connectivity an
 
 ## Prerequisites
 
-To run this demo, you will need a [{{prodnameWindows}} cluster](quickstart.mdx) with
-Windows Server 1809 (build 17763.1432 August 2020 update or newer). More recent versions of Windows Server can be used with a change to the demo manifests.
+To run this demo, you will need a [{{prodnameWindows}} cluster](operator.mdx) with
+Windows Server 1809 (build 17763.1432 August 2020 update or newer). More recent versions of Windows Server can be used with a change to the demo manifests, namely the version tags of the Windows images, e.g.: `servercore:ltsc2022` instead of `servercore:1809`.
 
 :::note
 
@@ -129,7 +129,7 @@ spec:
     - containerPort: 80
     env:
     - name: SERVE_PORT_80
-      value: This is a Calico for Windows demo.
+      value: This is a {{prodnameWindows}} demo.
     imagePullPolicy: IfNotPresent
   nodeSelector:
     kubernetes.io/os: windows
@@ -200,13 +200,13 @@ If that succeeds, we will see something like:
 ```
 StatusCode        : 200
 StatusDescription : OK
-Content           : This is a Calico for Windows demo.
+Content           : This is a {{prodnameWindows}} demo.
 RawContent        : HTTP/1.1 200 OK
                     Content-Length: 49
                     Content-Type: text/plain; charset=utf-8
                     Date: Fri, 21 Aug 2020 22:45:46 GMT
 
-                    This is a Calico for Windows demo.
+                    This is a {{prodnameWindows}} demo.
 Forms             :
 Headers           : {[Content-Length, 49], [Content-Type, text/plain;
                     charset=utf-8], [Date, Fri, 21 Aug 2020 22:45:46 GMT]}
@@ -222,7 +222,7 @@ RawContentLength  : 49
 Now let's apply a basic network policy that allows only the busybox pod to reach the porter pod.
 
 ```bash
-calicoctl apply -f - <<EOF
+kubectl apply -f - <<EOF
 apiVersion: projectcalico.org/v3
 kind: NetworkPolicy
 metadata:
@@ -399,7 +399,7 @@ spec:
         - containerPort: 80
       env:
         - name: SERVE_PORT_80
-          value: This is a Calico for Windows demo.
+          value: This is a {{prodnameWindows}} demo.
       imagePullPolicy: IfNotPresent
   nodeSelector:
     kubernetes.io/os: windows
@@ -524,13 +524,13 @@ Now that client and server pods are running on both Linux and Windows nodes, let
    ```
    StatusCode        : 200
    StatusDescription : OK
-   Content           : This is a Calico for Windows demo.
+   Content           : This is a {{prodnameWindows}} demo.
    RawContent        : HTTP/1.1 200 OK
                        Content-Length: 49
                        Content-Type: text/plain; charset=utf-8
                        Date: Fri, 21 Aug 2020 22:45:46 GMT
 
-                       This is a Calico for Windows demo.
+                       This is a {{prodnameWindows}} demo.
    Forms             :
    Headers           : {[Content-Length, 49], [Content-Type, text/plain;
                        charset=utf-8], [Date, Fri, 21 Aug 2020 22:45:46 GMT]}
