--- a/calico/getting-started/kubernetes/windows-calico/limitations.mdx
+++ b/calico/getting-started/kubernetes/windows-calico/limitations.mdx
@@ -4,16 +4,16 @@ description: Review limitations before starting installation.
 
 # Limitations and known issues
 
-## Calico for Windows feature limitations
+## {{prodnameWindows}} feature limitations
 
 | Feature             |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              |
 | ------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| Distributions       | **Supported:**<br />- EKS<br />- AKS<br />- AWS<br />- GCE<br />- Azure<br />- Kubernetes on-premises<br />- Kubernetes on DigitalOcean<br />- OpenShift<br />- Rancher RKE<br /><br />**Not supported**:<br />- GKE<br />- IKS<br />- OpenStack<br />- K3 clusters                                                                                                                                                                                                                          |
-| Install and upgrade | **Supported**: Manifest with manual upgrade<br /><br />**Not supported**: <br />- Operator install<br />- Non-cluster hosts<br />- Typha component for scaling (Linux-based feature)                                                                                                                                                                                                                                                                                                         |
-| Networking          | **Supported**:<br />- Calico VXLAN, no cross-subnet or VXLAN MTU settings with [limitations](#{{prodname}}-vxlan-networking-limitations)<br />- Calico non-overlay mode with BGP peering with [limitations](#{{prodname}}-bgp-networking-limitations)<br />- IPv4<br /><br />**Not supported**: <br />- Overlay mode with BGP peering<br />- IP in IP overlay with BGP routing<br />- Cross-subnet support and MTU setting for VXLAN<br />- IPv6 and dual stack<br />- Service advertisement |
+| Distributions       | **Supported:**<br />- EKS<br />- AKS<br />- AWS<br />- GCE<br />- Azure<br />- Kubernetes on-premises<br />- Kubernetes on DigitalOcean<br />- OpenShift<br />- Rancher RKE<br /><br />**Not supported**:<br />- GKE<br />- IKS<br />- OpenStack<br />- K3s clusters                                                                                                                                                                                                                          |
+| Install and upgrade | **Supported**: - Manifest with manual upgrade (deprecated)<br />- Operator install<br /><br />**Not supported**: <br />- Non-cluster hosts<br />- Typha component for scaling (Linux-based feature)                                                                                                                                                                                                                                                                                                         |
+| Networking          | **Supported**:<br />- {{prodname}} VXLAN, no cross-subnet or VXLAN MTU settings with [limitations](#{{prodname}}-vxlan-networking-limitations)<br />- {{prodname}} non-overlay mode with BGP peering with [limitations](#{{prodname}}-bgp-networking-limitations)<br />- IPv4<br /><br />**Not supported**: <br />- Overlay mode with BGP peering<br />- IP in IP overlay with BGP routing<br />- Cross-subnet support and MTU setting for VXLAN<br />- IPv6 and dual stack<br />- Service advertisement |
 | Security            | **Not supported**: <br />- Application Layer Policy (ALP) for Istio<br />- Policy for hosts (host endpoints, including automatic host endpoints)<br />- Encryption with WireGuard                                                                                                                                                                                                                                                                                                            |
-| Operations          | **Not supported**: <br />- Calico node status                                                                                                                                                                                                                                                                                                                                                                                                                                                |
-| Metrics             | **Not supported**: Prometheus monitoring                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
+| Operations          | **Supported**: <br />- {{prodname}} node status                                                                                                                                                                                                                                                                                                                                                                                                                                                |
+| Metrics             | **Supported**: Prometheus monitoring                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
 | eBPF                | **Not supported**: (Linux-based feature)                                                                                                                                                                                                                                                                                                                                                                                                                                                     |
 
 ## {{prodname}} BGP networking limitations
@@ -170,5 +170,4 @@ The destination selector is moved into the policy selector, so this policy is on
 
 ## Next steps
 
-- [Quickstart](quickstart.mdx)
-- [Standard install](kubernetes/standard.mdx)
+- [Install {{prodnameWindows}} using operator](operator.mdx)
