--- a/calico/getting-started/kubernetes/windows-calico/manual-install/quickstart.mdx
+++ b/calico/getting-started/kubernetes/windows-calico/manual-install/quickstart.mdx
@@ -7,9 +7,15 @@ description: Install Calico for Windows on a Kubernetes cluster for testing or d
 import Tabs from '@theme/Tabs';
 import TabItem from '@theme/TabItem';
 
+:::note
+
+The manual method for installing {{prodnameWindows}} is deprecated in favor of using [the Operator and Windows HostProcess containers (HPC)](../operator.mdx#install-{{prodnamedashWindows}}-using-the-operator). Support for this method will be dropped in a future {{prodname}} version.
+
+:::
+
 ## Big picture
 
-Install {{prodnameWindows}} on your Kubernetes cluster in approximately 5 minutes.
+Install {{prodnameWindows}} manually on your Kubernetes cluster in approximately 5 minutes.
 
 ## Concepts
 
@@ -17,15 +23,14 @@ Install {{prodnameWindows}} on your Kubernetes cluster in approximately 5 minute
 
 ## Before you begin
 
-Review the [Linux requirements](../requirements.mdx) and the [{{prodnameWindows}} requirements](kubernetes/requirements.mdx).
+Review the [Linux requirements](../../requirements.mdx) and the [{{prodnameWindows}} requirements](../requirements.mdx).
 
 Before beginning the quickstart, setup a {{prodname}} cluster on Linux nodes and provision Windows machines.
 
 ## How to
 
 - [Configure strict affinity for clusters using {{prodname}} networking](#configure-strict-affinity-for-clusters-using-calico-networking)
-- [Install {{prodnameWindows}} manually](#install-calico-for-windows-manually)
-- [Install {{prodnameWindows}} using HostProcess containers](#install-calico-for-windows-using-hostprocess-containers)
+- [Install {{prodnameWindows}} manually](#install-{{prodnamedashWindows}}-manually)
 - [Configure installation parameters](#configure-installation-parameters)
 
 ### Configure strict affinity for clusters using {{prodname}} networking
@@ -39,7 +44,7 @@ kubectl patch ipamconfigurations default --type merge --patch='{"spec": {"strict
 
 :::note
 
-If the above command failed to find ipamconfigurations resource, you need to install Calico API server. Please refer to [installing the Calico API server](../../../operations/install-apiserver.mdx).
+If the above command failed to find ipamconfigurations resource, you need to install the Calico API server. Please refer to [installing the Calico API server](../../../../operations/install-apiserver.mdx).
 
 :::
 
@@ -87,7 +92,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
 <TabItem label="Kubernetes VXLAN" value="Kubernetes VXLAN-0">
 
 1. Ensure that BGP is disabled since you're using VXLAN.
-   If you installed Calico using operator, you can do this by:
+   If you installed {{prodname}} using operator, you can do this by:
 
    ```bash
    kubectl patch installation default --type=merge -p '{"spec": {"calicoNetwork": {"bgp": "Disabled"}}}'
@@ -417,94 +422,7 @@ The following steps install a Kubernetes cluster on a single Windows node with a
 
 Congratulations! You now have a Kubernetes cluster with {{prodnameWindows}} and a Linux control node.
 
-### Install {{prodnameWindows}} using HostProcess containers
-
-:::note
-
-This installation method is a tech preview and should not be used for production clusters. Upgrades from a tech preview version of this
-installation method to the GA version might not be seamless.
-
-:::
-
-With Kubernetes v1.22, a new Windows container type called "HostProcess containers" can run directly on the host with access to the host network namespace,
-storage, and devices. With this feature, {{prodnameWindows}} can now be installed and managed using Kubernetes resources such as Daemonsets and ConfigMaps,
-instead of needing to configure and install {{prodnameWindows}} manually on each node. Using this installation method, the {{prodnameWindows}}
-services are no longer registered on the host. Instead, the services are run directly within HostProcess containers.
-
-#### Requirements
-
-In addition to the [{{prodnameWindows}} requirements](kubernetes/requirements.mdx),
-this installation method has [additional requirements](https://kubernetes.io/docs/tasks/configure-pod-container/create-hostprocess-pod/):
-
-- Kubernetes v1.22+
-- HostProcess containers support enabled: for v1.22, HostProcess containers support has to be [enabled](https://kubernetes.io/docs/tasks/configure-pod-container/create-hostprocess-pod/#before-you-begin). For Kubernetes v1.23+, HostProcess containers are enabled by default.
-- ContainerD 1.6.0+
-- The Windows nodes have joined the cluster
-
-To install ContainerD on the Windows node and configure the ContainerD service:
-
-```powershell
-Invoke-WebRequest {{windowsScriptsURL}}/Install-Containerd.ps1 -OutFile c:\Install-Containerd.ps1
-c:\Install-Containerd.ps1 -ContainerDVersion 1.7.1 -netAdapterName Ethernet -skipHypervisorSupportCheck -CNIConfigPath "c:/etc/cni/net.d" -CNIBinPath "c:/opt/cni/bin"
-```
-
-If you have an existing {{prodnameWindows}} installation using the manual method, your Windows nodes may have already joined the cluster.
-
-To join a Windows node to a cluster provisioned with kubeadm:
-
-- Install kubeadm and kubelet binaries and install the kubelet service
-
-```powershell
-Invoke-WebRequest {{windowsScriptsURL}}/PrepareNode.ps1 -OutFile c:\PrepareNode.ps1
-c:\PrepareNode.ps1 -KubernetesVersion v1.26.6
-```
-
-- Run kubeadm on a control plane host and copy the join command
-
-```bash
-kubeadm token create --print-join-command
-```
-
-- Edit the join command by appending `--cri-socket "npipe:////./pipe/containerd-containerd"` and update the kubeadm.exe path to `c:\k\kubeadm.exe`.
-  An example join command:
-
-```
-c:\k\kubeadm.exe join 172.16.101.139:6443 --token v8w2jt.jmc45acn85dbll1e --discovery-token-ca-cert-hash sha256:d0b7040a704d8deb805ba1f29f56bbc7cea8af6aafa78137a9338a62831739b4 --cri-socket "npipe:////./pipe/containerd-containerd"
-```
-
-- Run the join command on the Windows node. Shortly after it completes successfully, the Windows node will appear in `kubectl get nodes`.
-  The new node's status will be NotReady since the Calico CNI has not yet been installed.
-
-#### Migrating from {{prodnameWindows}} installed manually
-
-If your Windows nodes already have {{prodnameWindows}} installed using the manual installation method, you can continue this quickstart guide
-to migrate to a manifest-based installation. This installation process will uninstall any existing {{prodnameWindows}} services and overwrite the {{prodnameWindows}} installation files with those included in the `calico/windows` image. If `kubelet` and `kube-proxy` were installed using `{{rootDirWindows}}\kubernetes\install-kube-services.ps1`, those services will updated in-place and remain installed. If those services were running, they are restarted so those services
-will be updated in place and remain installed.
-
-:::note
-
-Before proceeding, take note of the configuration parameters in `{{rootDirWindows}}\config.ps1`. These configuration parameters will be needed during the install.
-
-:::
-
-#### Install
-
-<Tabs>
-<TabItem label="Kubernetes VXLAN" value="Kubernetes VXLAN-4">
-
-<CalicoWindowsInstall networkingType='vxlan' />
-
-</TabItem>
-<TabItem label="Kubernetes BGP" value="Kubernetes BGP-5">
-
-<CalicoWindowsInstall networkingType='windows-bgp' />
-
-</TabItem>
-</Tabs>
-
-Congratulations! You now have a Kubernetes cluster with {{prodnameWindows}} and a Linux control node.
-
-### Configure installation parameters
+#### Configure installation parameters
 
 | **Parameter Name** | **Description**                                                                                                                                                                                                                                                                                  | **Default**  |
 | ------------------ | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ | ------------ |
@@ -522,4 +440,4 @@ Congratulations! You now have a Kubernetes cluster with {{prodnameWindows}} and 
 
 ## Next steps
 
-You can now use the {{prodname}} Linux-based docs site for your documentation. Before you continue, review the [Limitations and known issues](limitations.mdx) to understand the features (and sections of documentation) that do not apply to Windows.
+You can now use the {{prodname}} Linux-based docs site for your documentation. Before you continue, review the [Limitations and known issues](../limitations.mdx) to understand the features (and sections of documentation) that do not apply to Windows.
